--- a/_includes/thanks.html
+++ b/_includes/thanks.html
@@ -1,4 +1,5 @@
-<p>LensKit is made possible by support from a number of organizations:</p>
+<p>LensKit is developed primarily by researchers at <a href="http://cs.txstate.edu">Texas State University</a> and <a href="http://grouplens.org">GroupLens Research</a> at the <a href="http://www.cs.umn.edu">University of Minnesota</a>, with contributions from developers around the world.
+It is made possible by support from a number of organizations:</p>
 <ul>
   <li>Multiple <a href="http://grouplens.org">GroupLens Research</a> projects, particularly <a href="http://www.movielens.org">MovieLens</a> and <a href="https://booklens.umn.edu/">BookLens</a>, use LensKit in production, providing experience, bug reports, and other valuable feedback (and code).  We also maintain <a href="/users/">list of LensKit users</a>.</li>
   <li>Development has been funded in part by the National Science foundation (under grants IIS 05-34939, 08-08692, 08-12148, and 10-17697).</li>
