Defer and integrate loads of things

--- a/s/master.scss
+++ b/s/master.scss
@@ -2,6 +2,9 @@
 nositemap: true
 ---
 
+@import "fonts/liberation/stylesheet";
+@import "fonts/pt-sans/stylesheet";
+@import "fonts/inconsolata/stylesheet";
 @import "settings";
 @import "foundation";
 // @import "foundation/components/grid";
