Use Google font hosting

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -44,7 +44,7 @@ $include-html-grid-classes: true;
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: 'Liberation Serif', Georgia, serif;
+$body-font-family: 'Tinos', 'Liberation Serif', Georgia, serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
