--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -12,15 +12,30 @@
 </title>
 <link rel="icon" type="image/png" href="/s/lenskit-mini.png">
 <link rel="stylesheet" href="/s/master.css">
-<link rel="stylesheet" href="/s/fonts/liberation/stylesheet.css">
-<link rel="stylesheet" href="/s/fonts/pt-sans/stylesheet.css">
-<link rel="stylesheet" href="/s/fonts/inconsolata/stylesheet.css">
 <link rel="stylesheet" href="/bower_components/highlightjs/styles/github.css">
 {% capture basename %}{{ page.url | split:"/" | last }}{% endcapture %}
 {% if basename == 'index.html' %}
 <link rel="canonical" href="{{ page.url | remove: 'index.html' }}">
 {% endif %}
 <script src="/bower_components/modernizr/modernizr.js"></script>
+<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [
+      'Tinos:400,700,400italic:greek,latin',
+      'PT+Sans:400,700:latin',
+      'Inconsolata:400,700:latin',
+      'PT+Sans+Caption:400,700:latin'
+    ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })();</script>
 </head>
 <body>
 <div class="fixed">
