un-async foundation

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -45,7 +45,7 @@
 </footer>
 <script src="/bower_components/modernizr/modernizr.js"></script>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/foundation/js/foundation.min.js" async></script>
+<script src="/bower_components/foundation/js/foundation.min.js"></script>
 <script src="/s/lenskit.js"></script>
 {% for script in page.scripts %}
 <script type="text/javascript" src="{{script}}"></script>
