--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -34,6 +34,8 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
   })();</script>
+<script type="text/javascript" data-main="/s/lenskit" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" async>
+</script>
 </head>
 <body>
 <div class="fixed">
@@ -43,10 +45,6 @@
 <footer>
   {% include footer.html %}
 </footer>
-<script src="/bower_components/modernizr/modernizr.js"></script>
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/foundation/js/foundation.min.js"></script>
-<script src="/s/lenskit.js"></script>
 {% for script in page.scripts %}
 <script type="text/javascript" src="{{script}}"></script>
 {% endfor %}
