--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -34,7 +34,7 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
   })();</script>
-<script type="text/javascript" data-main="/s/lenskit" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" async>
+<script type="text/javascript" data-main="/s/lenskit.min" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" async>
 </script>
 </head>
 <body>
