syntax and such updates

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -12,6 +12,7 @@
 </title>
 <link rel="icon" type="image/png" href="/s/lenskit-mini.png">
 <link rel="stylesheet" href="/s/master.css">
+<link rel="stylesheet" href="/s/syntax.css">
 {% capture basename %}{{ page.url | split:"/" | last }}{% endcapture %}
 {% if basename == 'index.html' %}
 <link rel="canonical" href="{{ page.url | remove: 'index.html' }}">
