add some next/prev links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: shell
     {% include {{page.sidenav}} %}
   </nav>
   {% endif %}
-  <article class="main {{bodyWidth}} columns">
+  <div class="main {{bodyWidth}} columns">
     {{content}}
-  </article>
+  </div>
 </div>
