--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,26 +1,18 @@
-<nav class="top-bar" data-topbar role="navigation">
-  <ul class="title-area">
-    {% if page.header.title != "hide" %}
-    <li class="name">
-    <h1><a href="/">LensKit</a></h1>
-    </li>
-    {% endif %}
+<nav class="pure-menu pure-menu-horizontal nav-menu" role="navigation">
+  <a href="/" class="pure-menu-heading pure-menu-link brand">LensKit</a></h1>
+  <ul class="pure-menu-list">
+    <li class="pure-menu-item"><a href="/news/">News</a>
+    <li class="pure-menu-item"><a href="/download/">Download</a>
+    <li class="pure-menu-item has-dropdown">
+      <a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
+      <ul class="dropdown">
+        <li><a href="/documentation/basics/">LensKit Basics</a>
+        <li><a href="/documentation/algorithms/">Algorithms</a>
+        <li><a href="/documentation/evaluator/">Evaluator</a>
+        <li><a href="/documentation/cli/">CLI Tools</a>
+        <li><a href="/apidocs/">API Documentation</a>
+      </ul>
+    <li class="pure-menu-item"><a href="/research/">Research</a>
+    <li class="pure-menu-item"><a href="/connect/">Connect</a>
   </ul>
-  <section class="top-bar-section" id="site-menu">
-    <ul class="right">
-      <li><a href="/news/">News</a>
-      <li><a href="/download/">Download</a>
-      <li class="has-dropdown">
-        <a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
-        <ul class="dropdown">
-          <li><a href="/documentation/basics/">LensKit Basics</a>
-          <li><a href="/documentation/algorithms/">Algorithms</a>
-          <li><a href="/documentation/evaluator/">Evaluator</a>
-          <li><a href="/documentation/cli/">CLI Tools</a>
-          <li><a href="/apidocs/">API Documentation</a>
-        </ul>
-      <li><a href="/research/">Research</a>
-      <li><a href="/connect/">Connect</a>
-    </ul>
-  </section>
 </nav>
