--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -13,6 +13,7 @@
 <link rel="icon" type="image/png" href="/s/lenskit-mini.png">
 <link rel="stylesheet" href="/s/master.css">
 <link rel="stylesheet" href="/s/syntax.css">
+<link rel="stylesheet" href="/bower_components/pure/grids-responsive-min.css">
 {% capture basename %}{{ page.url | split:"/" | last }}{% endcapture %}
 {% if basename == 'index.html' %}
 <link rel="canonical" href="{{ page.url | remove: 'index.html' }}">
