--- a/_sass/_mod-menu.scss
+++ b/_sass/_mod-menu.scss
@@ -1,7 +1,7 @@
-$menu-bg: #2e3436;
-$menu-hover-bg: #555753;
-$menu-text-color: #eeeeec;
-$menu-active-color: #fcaf3e;
+$menu-bg: $aluminium6;
+$menu-hover-bg: $aluminium5;
+$menu-text-color: $aluminium1;
+$menu-active-color: $orange-light;
 
 .nav-menu {
   background-color: $menu-bg;
