--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,3 +2,10 @@
   margin: 0 auto;
   max-width: 54em;
 }
+
+footer {
+  font-size: .8rem;
+  font-style: italic;
+  margin-top: 1em;
+  text-align: center;
+}
