--- a/_sass/_tango.scss
+++ b/_sass/_tango.scss
@@ -27,7 +27,7 @@ $red-med: #c00;
 $red-dark: #a40000;
 
 $aluminium1: #eeeeec;
-$aluminium2: #d3d7c4;
+$aluminium2: #d3d7cf;
 $aluminium3: #babdb6;
 $aluminium4: #888a85;
 $aluminium5: #555753;
