--- a/s/master.scss
+++ b/s/master.scss
@@ -2,150 +2,10 @@
 nositemap: true
 ---
 
-$caption-font: 'PT Sans Caption', 'PT Sans', sans-serif;
-nav.top-bar {
-  h1 {
-    font-family: $caption-font;
-  }
-}
-
-body {
-  //margin-top: $topbar-height;
-}
-
-header div{
-  text-align: center;
-  padding-top: 50px;
-  //padding-bottom: $topbar-height + 45px;
-}
-
-pre {
-  font-size: 0.85em;
-  padding: 1ex;
-  margin-bottom: 1em;
-  background: #f8f8f8;
-  code {
-    border: 0;
-  }
-}
-
-article {
-  ul, ol {
-    margin-left: 2em;
-  }
-}
-
-.main {
-  // max-width: $row-width;
-  margin: 0 auto;
-}
-
-footer {
-  // @extend .row;
-  text-align: center;
-  // color: $subheader-font-color;
-  font-style: italic;
-}
-
-.use-case .uc-header {
-  text-align: center;
-  .uc-logo {
-    height: 120px;
-    width: 120px;
-  }
-}
-
-.project-info {
-  section {
-    margin-top: 1rem;
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-}
-
-.read-more {
-    text-align: text-right;
-    font-style: italic;
-    // font-size: $paragraph-font-size;
-}
-
-.index article {
-    padding-left: 2rem;
-}
-
-.side-nav {
-  .heading {
-    font-family: $caption-font;
-    a {
-      font-family: $caption-font !important;
-    }
-  }
-}
-
-.citation {
-    line-height: 130%;
-    font: {
-        size: 1rem;
-    }
-    padding: {
-        left: 2rem;
-        right: 2rem;
-    }
-    margin-bottom: 1ex;
-
-    .pub-venue {
-        font-style: italic;
-    }
-}
-
-.alert-box {
-  border: {
-    style: none none none solid;
-    width: 6px;
-  }
-
-  &.warning, &.info, &.error {
-    background: #F7F7F7 none repeat scroll 0% 0%;
-    color: #333;
-  }
-
-  p:last-child {
-    margin-bottom: 0;
-  }
-}
-
-aside {
-    font: {
-        style: italic;
-        size: 1rem;
-    }
-    margin-bottom: 1ex;
-    padding: {
-        left: 2rem;
-        right: 2rem;
-    }
-}
-
-a:link, a:visited {
-  code {
-    //color: $anchor-font-color;
-  }
-}
-a:hover {
-  code {
-    //color: $anchor-font-color-hover;
-  }
-}
-
-// fix the definition lists
-dd {
-    padding-left: 2em;
-}
-
 @import "pure";
 @import "style";
 @import "layout";
 @import "mod-frontpage";
 @import "mod-menu";
 @import "mod-side-menu";
+@import "mod-doc-nav";
