JavaScript and scaling improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: shell
 <div class="shell pure-g">
   {% if page.sidenav %}
   {% assign bodyWidth = "pure-u-md-3-4" %}
-  <nav class="sidebar pure-u-1 pure-u-md-1-4">
+  <nav class="sidebar side-nav pure-u-1 pure-u-md-1-4">
     {% include {{page.sidenav}} %}
   </nav>
   {% else %}
