--- a/_sass/_tango.scss
+++ b/_sass/_tango.scss
@@ -18,9 +18,9 @@ $blue-light: #729fcf;
 $blue-med: #3465a4;
 $blue-dark: #204a87;
 
-$plumb-light: #ad7fa8;
-$plumb-med: #75507b;
-$plumb-dark: #5c3566;
+$plum-light: #ad7fa8;
+$plum-med: #75507b;
+$plum-dark: #5c3566;
 
 $red-light: #ef2929;
 $red-med: #c00;
