--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,7 +10,7 @@ $text-color: #000;
 $light-color: $aluminium4;
 
 $link-color: $blue-med;
-$link-visited-color: $plumb-med;
+$link-visited-color: $plum-med;
 $link-active-color: $orange-med;
 $link-hover-color: $butter-med;
 
@@ -23,6 +23,7 @@ textarea,
 .pure-g [class *= "pure-u"] {
   color: $text-color;
   font-family: $body-font;
+  font-feature-settings: 'ccmp', 'liga';
   font-size: 14pt;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -45,7 +46,7 @@ h2 {
   font-size: 1rem;
   font-weight: bold;
   margin-bottom: 0;
-  
+
   & + p {
     margin-top: 0;
   }
@@ -68,12 +69,13 @@ dt {
 }
 
 dd {
+  margin-left: 0;
   padding-left: 2em;
 }
 
 ul,
 ol {
-  padding-left: 1em;
+  padding-left: 2em;
 }
 
 // links
