--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="pure-menu pure-menu-horizontal nav-menu" role="navigation">
+<nav class="pure-menu nav-menu" role="navigation">
   <a href="/" class="pure-menu-heading pure-menu-link brand">LensKit</a></h1>
   <ul class="pure-menu-list">
     <li class="pure-menu-item"><a href="/news/">News</a>
