minify js and png

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -46,7 +46,7 @@
   {% include footer.html %}
 </footer>
 <script type="text/javascript" src="/s/ender.min.js"></script>
-<script type="text/javascript" src="/s/lenskit.js"></script>
+<script type="text/javascript" src="/s/lenskit.min.js"></script>
 {% for script in page.scripts %}
 <script type="text/javascript" src="{{script}}"></script>
 {% endfor %}
