--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,3 +1,4 @@
+/*! Syntax highlighting from Pygments */
 .hll { background-color: #ffffcc }
 .c { color: #888888 } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
