--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -11,12 +11,16 @@
   {% endif %}
 </title>
 <link rel="icon" type="image/png" href="/s/lenskit-mini.png">
-<link rel="stylesheet" href="/s/master.css">
-<link rel="stylesheet" href="/bower_components/pure/grids-responsive-min.css">
 {% capture basename %}{{ page.url | split:"/" | last }}{% endcapture %}
 {% if basename == 'index.html' %}
 <link rel="canonical" href="{{ page.url | remove: 'index.html' }}">
 {% endif %}
+<script type="text/javascript">
+  var l = document.createElement('link');
+  l.rel = 'stylesheet';
+  l.href = '/s/master.css';
+  document.getElementsByTagName('head')[0].appendChild(l);
+</script>
 <script type="text/javascript">
   WebFontConfig = {
     google: { families: [
