--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,4 +1,6 @@
-/*! Syntax highlighting from Pygments */
+/*!
+Syntax theme from Pygments.
+ */
 .hll { background-color: #ffffcc }
 .c { color: #888888 } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
