--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -15,12 +15,7 @@
 {% if basename == 'index.html' %}
 <link rel="canonical" href="{{ page.url | remove: 'index.html' }}">
 {% endif %}
-<script type="text/javascript">
-  var l = document.createElement('link');
-  l.rel = 'stylesheet';
-  l.href = '/s/master.css';
-  document.getElementsByTagName('head')[0].appendChild(l);
-</script>
+<link rel="stylesheet" href="/s/master.css">
 <script type="text/javascript">
   WebFontConfig = {
     google: { families: [
