swap doc page layout

--- a/_sass/_mod-side-menu.scss
+++ b/_sass/_mod-side-menu.scss
@@ -1,6 +1,8 @@
 .sidebar {
   .pure-menu {
     margin-top: 1rem;
+    margin-left: 1ex;
+    margin-right: 1ex;
     font-family: $header-font;
   }
 
