make LensKit javascript asynchronous

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -43,8 +43,7 @@
 <footer>
   {% include footer.html %}
 </footer>
-<script type="text/javascript" src="/s/ender.min.js"></script>
-<script type="text/javascript" src="/s/lenskit.min.js"></script>
+<script type="text/javascript" src="/s/lenskit.min.js" async></script>
 {% for script in page.scripts %}
 <script type="text/javascript" src="{{script}}"></script>
 {% endfor %}
