--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,13 @@ layout: shell
 ---
 {% assign bodyWidth = "pure-u-md-5-6" %}
 <div class="shell pure-g">
-  {% if page.sidenav %}{% else %}
+  {% if page.sidenav %}{% assign bodyWidth = "pure-u-md-2-3 pure-u-lg-3-4" %}{% else %}
   <div class="spacer pure-u-1 pure-u-md-1-12"></div>
   {% endif %}
   <main class="main pure-u-1 {{bodyWidth}}">
     {{content}}
   </main>
   {% if page.sidenav %}
-  {% assign bodyWidth = "pure-u-md-2-3 pure-u-lg-3-4" %}
   <nav class="sidebar side-nav pure-u-1 pure-u-md-1-3 pure-u-lg-1-4">
     {% include {{page.sidenav}} %}
   </nav>
