Add Piwik tracker to main pages

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -47,5 +47,6 @@
 {% for script in page.scripts %}
 <script type="text/javascript" src="{{script}}"></script>
 {% endfor %}
+{% include piwik.html %}
 </body>
 </html>
